move framework trait into its own sui-indexer-alt-framework-store that provides the generic store traits, and people can opt-in using features
implement store trait in sui-pg-db

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,6 +122,7 @@ members = [
   "crates/sui-indexer-alt",
   "crates/sui-indexer-alt-e2e-tests",
   "crates/sui-indexer-alt-framework",
+  "crates/sui-indexer-alt-framework-store-traits",
   "crates/sui-indexer-alt-jsonrpc",
   "crates/sui-indexer-alt-metrics",
   "crates/sui-indexer-alt-restorer",
@@ -683,6 +684,7 @@ sui-http = { path = "crates/sui-http" }
 sui-indexer = { path = "crates/sui-indexer" }
 sui-indexer-alt = { path = "crates/sui-indexer-alt" }
 sui-indexer-alt-framework = { path = "crates/sui-indexer-alt-framework", default-features = false }
+sui-indexer-alt-framework-store-traits = { path = "crates/sui-indexer-alt-framework-store-traits" }
 sui-indexer-alt-jsonrpc = { path = "crates/sui-indexer-alt-jsonrpc" }
 sui-indexer-alt-metrics = { path = "crates/sui-indexer-alt-metrics" }
 sui-indexer-alt-restorer = { path = "crates/sui-indexer-alt-restorer" }
